Refactor CSS selectors and update styles

--- a/styles.css
+++ b/styles.css
@@ -4,27 +4,34 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    min-height:100vh;
 }
-.loginscreen { 
+
+#loginscreen { 
     background-color: #f1e8c7;
     padding:30px ;
     width:300px ;
-    border-radius: 8px; 
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1); 
+    border-radius:15px;
+    border: 1px solid #473f34;
+    box-shadow: 0 8px 20px rgba(0,0,0,0.25);
+    
 }
-input[type="email"], input[type="password"] {
+#email, #password {
+    background-color: rgba(255,255,255,0.6);
     width: 100%;
     padding: 10px;
-    margin: 10px 0;
-    border: 1px solid #ccc;
+    margin:0 0 5px 0;
+    border: 1px solid rgba(71, 63, 52, 0.5);
     border-radius: 4px;
 }
-.caption {
+#legenda {
+    font-size: 22px;
     text-align: center;
-    margin-bottom: 20px;
+    margin: 0 0 10px 0;
     color: #473f34;
+    font-weight: 600;
 }
-input[type="submit"] {
+button {
     width: 100%;
     padding: 10px;
     background-color: #473f34;
@@ -32,4 +39,8 @@ input[type="submit"] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+}
+#loginscreen input,
+#loginscreen button {
+    box-sizing: border-box;
 }
